fix: z-index modal

--- a/app/globals.css
+++ b/app/globals.css
@@ -6,7 +6,6 @@
 #CybotCookiebotDialogBody,
 #CybotCookiebotDialogRegion {
   z-index: 2147483647 !important;
-  position: fixed !important;
 }
 
 body {
